
load(
    "@rules_cc//cc:defs.bzl",
    "cc_binary",
    "cc_library"
)

load(
    "@rules_pkg//:pkg.bzl",
    "pkg_tar",
    "pkg_deb"
)
load(
    "@io_rules_sdlc//utils:helpers.bzl",
    "sdlc_cpp_library",
    "sdlc_cpp_binary",
)


#cc_library(
sdlc_cpp_library(

    name = "loggingService",

    srcs = [
        "LoggingService.cpp",
#        "Dummy.cpp",

    ],

    hdrs = [
        "LoggingService.hpp",
#        "Dummy.hpp",

    ],

    includes = [
        ".",
    ],

    copts = [
        "-DLOG_LEVEL=1",
#        "-lapr-1",
#        "-laprutil-1",
#        "-llog4cxx",
        "-I/usr/local/include/",
    ],

    linkopts = [
        "-L/usr/local/lib",
		"-pthread",
        "-lapr-1",
        "-laprutil-1",
        "-llog4cxx",
	],

    visibility = ["//visibility:public"],
    #visibility = ["//src/main/test:__pkg__"],
)


