load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_test")

exports_files(
    [
        "BUILD.openssl.bazel",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "openssl_test",
    srcs = ["openssl_test.cc"],
    linkopts = select({
        "@com_github_openssl_openssl//:msvc_compiler": [
            "advapi32.lib",
            "user32.lib",
        ],
        "//conditions:default": [],
    }),
    deps = ["@com_github_openssl_openssl//:openssl"],
)

build_test(
    name = "build_test",
    targets = [
        "@com_github_openssl_openssl//:openssl",
        "@com_github_openssl_openssl//:runnable_openssl",
    ],
    visibility = ["//:__pkg__"],
)

sh_test(
    name = "openssl_launch_test",
    srcs = ["openssl_test.sh"],
    data = ["@com_github_openssl_openssl//:runnable_openssl"],
    env = {
        "OPENSSL": "$(rootpath @com_github_openssl_openssl//:runnable_openssl)",
    },
)

test_suite(
    name = "openssl_test_suite",
    tests = [
        ":build_test",
        ":openssl_launch_test",
        ":openssl_test",
    ],
    visibility = ["//:__pkg__"],
)
